fixed vertical line time position && alignment hours

--- a/src/style.scss
+++ b/src/style.scss
@@ -99,28 +99,22 @@ progress[value]::-webkit-progress-value {
   // border-radius: 40px;
   background-color: #06447c;
 }
-.date-picker__button {
-  // position: relative;
-  width: 24px;
-  height: 24px;
-  background: #e9ecef;
-  border-radius: 100px;
-  border: none;
-  & ~ & {
-    margin-left: 11.6%;
-  }
+span + span {
+  margin-left: 27px;
 }
 .date-picker__date-today {
   display: inline-block;
   position: absolute;
-  top: 1px;
-  left: 34%;
-}
-span {
-  color: white;
-}
-span + span {
-  margin-left: 26px;
+  width: 19.1%;
+  height: 24px;
+  line-height: 24px;
+  text-align: center;
+  top: 11px;
+  color: #fff;
+  span {
+    vertical-align: top;
+    margin: 7%;
+  }
 }
 .date-picker__date {
   position: relative;
@@ -130,14 +124,15 @@ span + span {
 .date-picker__hours {
   display: inline-block;
   position: absolute;
-  top: 17px;
-  left: 22.2%;
+  top: 14px;
+  left: 19%;
+  color: #fff;
 }
 .date-picker__hour {
   display: inline-block;
   width: 49px;
   height: 13px;
-  text-align: center;
+  text-align: left;
   font-size: 13px;
   letter-spacing: 0.4px;
   font-family: "Poppins", sans-serif;
@@ -248,15 +243,21 @@ progress {
   border-bottom: 1px solid white; //
   background-color: #1772c3;
 }
+.date-picker__arrows {
+  display: inline-block;
+  width: 24px;
+}
 .date-picker__right-arrow {
   position: absolute;
-  top: 18px;
+  width: 24px;
+  top: 11px;
   left: 15.4%;
   z-index: 1;
 }
 .date-picker__left-arrow {
   position: absolute;
-  top: 18px;
+  width: 24px;
+  top: 11px;
   left: 2%;
   z-index: 1;
 }
@@ -304,13 +305,13 @@ progress {
 .new-meet-create__circle-icon-with-close {
   position: absolute;
   left: 1152px;
-  top: 83px;
+  top: 50px;
   width: 24px;
   height: 24px;
 }
 .new-meet-create__back-button {
   position: absolute;
-  top: 676px;
+  top: 595px;
   left: 552px;
   width: 72px;
   height: 38px;
@@ -322,7 +323,7 @@ progress {
 }
 .new-meet-create__create-button {
   position: absolute;
-  top: 676px;
+  top: 595px;
   left: 660px;
   width: 110px;
   height: 38px;
@@ -335,7 +336,7 @@ progress {
 .new-meet-create__text {
   position: absolute;
   left: 204px;
-  top: 103px;
+  top: 53px;
   width: 212px;
   height: 24px;
   font-size: 20px;
@@ -343,7 +344,7 @@ progress {
 .new-meet-create__meet-title {
   position: absolute;
   left: 204px;
-  top: 167px;
+  top: 117px;
   width: 420px;
   height: 38px;
   border-radius: 4px;
@@ -351,7 +352,7 @@ progress {
 .new-meet-create__meet-date {
   position: absolute;
   left: 656px;
-  top: 144px;
+  top: 94px;
   width: 238px;
   height: 38px;
   border-radius: 4px;
@@ -359,7 +360,7 @@ progress {
 .new-meet-create__meet-people {
   position: absolute;
   left: 204px;
-  top: 249px;
+  top: 199px;
   width: 420px;
   height: 38px;
   border-radius: 4px;
@@ -435,7 +436,11 @@ progress {
 .new-meet-create__meet-people-label {
   position: absolute;
   left: 204px;
-  top: 225px;
+  top: 175px;
+}
+.new-meet-create__participants-list {
+  position: absolute;
+  top: -11px;
 }
 .new-meet-create__meet-people-list {
   overflow-y: scroll;
@@ -443,13 +448,14 @@ progress {
   left: 204px;
   top: 249px;
   width: 420px;
-  height: 218px;
+  height: 267px;
   padding-bottom: 5px;
   background: #FFFFFF;
   color: #000;
   box-shadow: 0 1px 10px 0 rgba(0,44,92,0.28);
   list-style: none;
   z-index: 1;
+  border-radius: 4px;
   span {
     // font-size: 13px;
     color: grey;
@@ -483,7 +489,7 @@ progress {
   position: absolute;
   width: auto;
   left: 660px;
-  top: 225px;
+  top: 175px;
 }
 .new-meet-create__selected-meeting-room {
   position: relative;
@@ -500,7 +506,7 @@ progress {
 .new-meet-create__meet-room {
   position: relative;
   left: 660px;
-  top: 213px;
+  top: 163px;
   width: 420px;
   height: 37px;
   line-height: 37px;
@@ -526,7 +532,7 @@ progress {
 .new-meet-create__time {
   position: relative;
   left: 910px;
-  top: 167px;
+  top: 117px;
   border-radius: 4px;
   width: 72px;
   height: 38px;
@@ -539,7 +545,7 @@ progress {
 .new-meet-create__hyphen-between-times {
   position: absolute;
   left: 987px;
-  top: 177px;
+  top: 127px;
   font-size: 13px;
   color: #fff;
   letter-spacing: 0.47px;
@@ -548,7 +554,7 @@ progress {
   position: absolute;
   display: block;
   left: 204px;
-  top: 147px;
+  top: 97px;
   & ~ & {
     margin-left: 50px;
   }
@@ -557,19 +563,19 @@ progress {
   position: absolute;
   display: block;
   left: 656px;
-  top: 147px;
+  top: 97px;
 }
 .new-meet-create__label-date-begin {
   position: absolute;
   display: block;
   left: 911px;
-  top: 147px;
+  top: 97px;
 }
 .new-meet-create__label-date-end {
   position: absolute;
   display: block;
   left: 1004px;
-  top: 147px;
+  top: 97px;
 }
 .new-meet-create__hint {
   position: absolute;
@@ -578,7 +584,7 @@ progress {
   height: 70px;
   line-height: 24px;
   text-align: center;
-  top: 467px;
+  top: 494px;
   border-radius: 4px;
   left: 204px;
   z-index: 999;
@@ -615,7 +621,7 @@ progress {
   width: 80.9%;
   height: 645px;
   display: grid;
-  overflow-x: scroll;
+  // overflow-x: scroll;
   grid-template-columns: repeat(17, minmax(75px, 75px));
   // grid-template-columns: repeat(13, 50px);
   // grid-template-rows: repeat(8, 28px);
